# SLED-TTS

./: .gitignore  README.md  pyproject.toml
scripts/: eval_continue.py  eval_reference.py  eval_stream.py  run_offline.py  run_stream.py  run_voice_clone.py  train_libriheavy.py  train_libriheavy_stream.py
shell_scripts/: eval.sh  run.sh  train_libriheavy.sh  train_libriheavy_stream.sh
sled/: energy_distance.py  modeling_llama_with_dropout.py  sled.py  sled_stream.py  trainer.py  trainer_libriheavy.py
sled.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tokenizer_bpe_libriheavy/: merges.txt  vocab.json
