[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sled"
version = "0.1.0"
description = "Implementation of SLED"
authors = [
    { name="Zhengrui Ma", email="mazhengrui21b@ict.ac.cn" }
]
dependencies = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "transformers==4.47.0",
    "datasets==3.1.0",
    "accelerate==1.2.0",
    "numpy==1.26.4",
    "librosa==0.10.2.post1",
    "soundfile==0.12.1"
]

[tool.setuptools]
packages = ["sled"]
